--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# firebase-debug.log
+firebase-debug.log.*
+# firebase files
+.firebaserc
+firebase.json
+firebase.js
